Fixed newsletter section position on mobile

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@
 .custom-newsletter-subscribe {
   color: #fff;
   background-color: #f72210;
-  width: 40%;
+  width: 50%;
 }
 
 .newsletter-main-img {
@@ -275,6 +275,7 @@
     background: url("https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5") center center / cover no-repeat;
     width: 200%;
     max-width: 191px;
+    margin-right: 5%;
   }
 
   .mini-size {
